Fixed 'code block' error messages not showing in red

--- a/src/components/CreatePlugin/CreatePlugin.css
+++ b/src/components/CreatePlugin/CreatePlugin.css
@@ -53,7 +53,7 @@
   fill: rgb(201, 25, 11)
 }
 
-.file-error {
+.error-message {
   display: block;
   color: rgb(201, 25, 11);
   padding-top: 0.25em
